correcte ortho in rmd

--- a/assignment_1.Rmd
+++ b/assignment_1.Rmd
@@ -77,9 +77,9 @@ z chr [1:5] "X" "Z" "P" "O" "B"
   * prob here is outcome_probabilities, which indicates the probability of picking out each number of balls. In our case, with total 400 balls, we will have 40 ball number "0", 200 ball "1", 80 ball "2", 40 ball "3", 20 ball "4" and 20 ball "5".
   * the game starts with these 400 balls, and we will do the picking 400 times. Each time the number of the ball is recorded in the sequence fake_data_points. So finally we got 400 numbers variating from 0 to 5 (not eaqually distributed, meaning that more "1"s than "4"s or "5"s for instance)
 
-6. Statement 6: creates a data frame using tibble (a modern way of creating a data frame). The data frame's only colume name is "fake measurement" and contains 400 rows with each one the result of fake_data_points. How I came to get this:
+6. Statement 6: creates a data frame using tibble (a modern way of creating a data frame). The data frame's only column name is "fake measurement" and contains 400 rows with each one the result of fake_data_points. How I came to get this:
   * data_frame seems alike data.frame, the later is a classic way to create a data frame: `data.frame()`, however it differs slightly from the old one when seeing "_" instead of ".". The first guess would be that `data_frame(Fake measurement=fake_data_points)` does approximatly the same thing as data.frame, i.e, create a data frame with fake_data_points.
-  * the arguments inside the data_frame could be explained by the `data.frame(..., row.names = NULL)`, in which the row.names could be "a character string specifying a colune to be used as row names". When trying print fake_data_set in the console, it shows unexpectedly the colume name as "fake measurement"
+  * the arguments inside the data_frame could be explained by the `data.frame(..., row.names = NULL)`, in which the row.names could be "a character string specifying a colune to be used as row names". When trying print fake_data_set in the console, it shows unexpectedly the column name as "fake measurement"
   * after consolidating the use of [tibble](https://blog.rstudio.com/2016/03/24/tibble-1-0-0/), I read that data_frame(), which is a tibble from individual vectors, does much less than data.frame(); however in terms of printing, tibble seems to be more sophisticated. Also in terms of subsetting, tibble is more strict.
   * with :: in between tibble and data_frame, I am not quite sure. My guess would be that :: is a way to use the data_frame methode in tibble package; and with <- means to assign this data frame to a variable called "fake_data_set"
   
